# tictactoe

./: .gitignore  README.md  ai.py  game.py  pyproject.toml  requirements.txt  tictactoe.py
docs/: index.html
src/tictactoe/: __main__.py  ai.py  game.py
tests/: test_game.py
