[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tictactoe"
version = "0.0.1"
dependencies = ["rich"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
addopts = "-ra -q -vv"
testpaths = [
    "tests",
]